--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,19 +11,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.PackDetails" >
+        <activity android:name=".activity.ChooseOptionsForBooking"></activity>
+        <activity android:name=".activity.PackDetails" />
+        <!--
+<activity
+            android:name=".activity.test"
+            android:label="@string/title_activity_test"
+            android:theme="@style/AppTheme.NoActionBar" />
+        -->
+        <activity android:name=".activity.PackList">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <!--<activity
-            android:name=".activity.test"
-            android:label="@string/title_activity_test"
-            android:theme="@style/AppTheme.NoActionBar" />-->
-        <activity android:name=".activity.PackList"/>
-        <!--<activity android:name=".activity.ChoosePreferedTags" />-->
+        </activity> <!-- <activity android:name=".activity.ChoosePreferedTags" /> -->
         <activity android:name=".activity.SignUp" />
         <activity android:name=".activity.Login" />
     </application>
